--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/foundry-dasy"]
 	path = lib/foundry-dasy
 	url = https://github.com/dasylang/foundry-dasy
+[submodule "lib/ens-contracts"]
+	path = lib/ens-contracts
+	url = https://github.com/ensdomains/ens-contracts
